Páginas criadas para organização.

--- a/pages/area_usuario_home.html
+++ b/pages/area_usuario_home.html
@@ -30,40 +30,60 @@
                 <li>
                     <a>Cadastrar</a>
                     <ul>
-                    <li>
-                        <a href="">Curso</a>
-                    </li>
-                    <li>
-                        <a href="">Módulo</a>
-                    </li>
-                    <li>
-                        <a href="">Unidade Curricular</a>
-                    </li>
-                    <li>
-                        <a href="">Turma</a>
-                    </li>
-                    <li>
-                        <a href="">Aluno</a>
-                    </li>
-                    <li>
-                        <a href="">Professor</a>
-                    </li>
-                    <li>
-                        <a href="">Cronograma</a>
-                    </li>
-                    <li>
-                        <a href="">Professor em UC</a>
-                    </li>
-                    <li>
-                        <a href="">Aluno em Turma</a>
-                    </li>
+                        <li>
+                            <a href="">Curso</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_modulo.html">Módulo</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_uc.html">Unidade Curricular</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_turma.html">Turma</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_aluno.html">Aluno</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_professor.html">Professor</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_cronograma.html">Cronograma</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_professor_uc.html">Professor em UC</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_aluno_turma.html">Aluno em Turma</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="">Cronogramas</a>
+                    <a href="./cronogramas.html">Cronogramas</a>
                 </li>
                 <li>
                     <a href="">Alterar</a>
+                    <ul>
+                        <li>
+                            <a href="./alterar_curso.html">Curso</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_modulo.html">Módulo</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_uc.html">Unidade Curricular</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_turma.html">Turma</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_aluno.html">Aluno</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_professor.html">Professor</a>
+                        </li>
+                    </ul>
                 </li>
                 </ul>
             </nav>
@@ -72,49 +92,8 @@
                 <article id="articleTitulo">
                     <h2 class="h2Titulo" id="nomeUsuario">Nome do Usuário*</h2>
                 </article>
-                <article id="articleInput">
-                    <div id="divLabel">
-                        <form action="#" method="post">
-                            <fieldset id="fieldsetLabel">
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>Usuário:</label>
-                                        <input type="text" name="username" maxlength="40" required />
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>CPF:</label>
-                                        <input type="text" name="cpf" maxlength="14" required />
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>E-mail:</label>
-                                        <input type="text" name="email" maxlength="40" required />
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>Senha:</label>
-                                        <p class="reqSenha">Mínimo 6 caracteres (3 letras, 2 números e 1 caracter especial)</p>
-                                        <input type="password" name="password" maxlength="50" required />
-                                        <input type="checkbox" name="ver_senha" />
-                                    </div>
-                                </fieldset>
-                                <fieldset id="bloco">
-                                    <div class="dados">
-                                        <label>Confirme sua senha:</label>
-                                        <input type="password" name="confirm_password" maxlength="50" required />
-                                        <input type="checkbox" name="ver_senha" />
-                                    </div>
-                                </fieldset>
-                            </fieldset>
-                        </form>
-                    </div>
-                </article>
-                <article id="articleButton">
-                    <p class="pCenter"><button type="submit" class="botao" id="btnLogin">Cadastrar</button></p>
+                <article id="articleInfoNav">
+                    <p>Preencher com containers com imagens para cadastro, cronograma e alterar</p>
                 </article>
             </section>
             <hr id="hr1" />
