--- a/pages/signin.html
+++ b/pages/signin.html
@@ -48,22 +48,22 @@
                                 <fieldset id="bloco">
                                     <div class="dados">
                                         <label>E-mail:</label>
-                                        <input type="text" name="email" maxlength="40" required />
+                                        <input type="text" name="email" maxlength="50" required />
                                     </div>
                                 </fieldset>
                                 <fieldset id="bloco">
                                     <div class="dados">
                                         <label>Senha:</label>
                                         <p class="reqSenha">Mínimo 6 caracteres (3 letras, 2 números e 1 caracter especial)</p>
-                                        <input type="password" name="password" maxlength="50" required />
+                                        <input type="password" name="password" maxlength="60" required />
                                         <input type="checkbox" name="ver_senha" />
                                     </div>
                                 </fieldset>
                                 <fieldset id="bloco">
                                     <div class="dados">
                                         <label>Confirme sua senha:</label>
-                                        <input type="password" name="confirm_password" maxlength="50" required />
-                                        <input type="checkbox" name="ver_senha" />
+                                        <input type="password" name="confirm_password" maxlength="60" required />
+                                        <input type="checkbox" name="ver_senhaC" />
                                     </div>
                                 </fieldset>
                             </fieldset>
@@ -82,3 +82,4 @@
             </footer>
         </main>
     </body>
+</html>
