--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <fieldset id="bloco">
                                     <div class="dados">
                                         <label>Senha:</label>
-                                        <input type="password" name="password" maxlength="50" required />
+                                        <input type="password" name="password" maxlength="60" required />
                                         <input type="checkbox" name="ver_senha" />
                                     </div>
                                 </fieldset>
@@ -69,3 +69,4 @@
             </footer>
         </main>
     </body>
+</html>
