Novas páginas integradas ao projeto. Banco de dados e documentação técnica adicionadas a pasta.

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                                 </fieldset>
                             </fieldset>
                             <article id="articleButton">
-                                <p class="pCenter"><button type="submit" class="botao" id="btnLogin" name="btnLoginName" value="Login">Login</button></p>
+                                <p class="pCenter"><button type="submit" class="botao" id="btnLogin" name="btnLoginName" value="Login" name="btnLogIn">Login</button></p>
                             </article>
                         </form>
                     </div>
                 </article>
                 <article id="articleSignin">
-                    <p class="pLeft">Não possui uma conta? <a href="./pages/signin.html"><button class="botao" id="btnSignin">Sign In</button></a></p>
+                    <p class="pLeft">Não possui uma conta? <a href="./pages/signin.html"><button class="botao" id="btnSignin" name="btnSignIn">Sign In</button></a></p>
                 </article>
             </section>
             <hr id="hr1" />
