--- a/pages/area_usuario_home.html
+++ b/pages/area_usuario_home.html
@@ -140,8 +140,8 @@
                     </div>
                 </article>
                 <article id="articleButtonFlex">
-                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnAlterarDados">Alterar Dados</button></p>
-                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnDeletarConta">Deletar Conta</button></p>
+                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnAlterarDados" name="btnAlterar_Dados_Usuarios">Alterar Dados</button></p>
+                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnDeletarConta" name="btnDeletar_Dados_Usuarios">Deletar Conta</button></p>
                 </article>
             </section>
             <hr id="hr1" />
