--- a/pages/cadastrar_curso.html
+++ b/pages/cadastrar_curso.html
@@ -118,8 +118,8 @@
                         </form>
                     </div>
                 </article>
-                <article id="articleButtonFlex">
-                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin">Cadastrar</button></p>
+                <article id="articleButton">
+                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Curso">Cadastrar</button></p>
                 </article>
             </section>
             <hr id="hr1" />
