--- a/pages/signin.html
+++ b/pages/signin.html
@@ -71,7 +71,7 @@
                     </div>
                 </article>
                 <article id="articleButton">
-                    <p class="pCenter"><button type="submit" class="botao" id="btnLogin">Cadastrar</button></p>
+                    <p class="pCenter"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Usuario">Cadastrar</button></p>
                 </article>
             </section>
             <hr id="hr1" />
