--- a/pages/cadastrar_modulo.html
+++ b/pages/cadastrar_modulo.html
@@ -1,1 +1,140 @@
-<p>ola</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <title>Sistema Pedagógico</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="../css/layout.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/reset.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/form.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/menu.css"/>
+    </head>
+    <body>
+        <main class="corpo">
+            <header>
+                <section id="sectionHeader">
+                    <article id="articleHeaderLogo">
+                        <a href="./area_usuario_home.html"><img class="imgLogo" src="../img/senac_logo_new.png" alt="senac_logo" title="Senac Logo" /></a>
+                    </article>
+                    <article id="articleHeaderTitle">
+                        <h1 class="h1">Área do Usuário</h1>
+                    </article>
+                </section>
+            </header>
+            <hr id="hr1" />
+            <input type="checkbox" id="bt_menu" />
+            <label for="bt_menu">&#9776;</label>
+            <nav id="menu">
+                <ul>
+                    <li>
+                        <a href="./area_usuario_home.html">Início</a>
+                    </li>
+                <li>
+                    <a>Cadastrar</a>
+                    <ul>
+                        <li>
+                            <a href="./cadastrar_curso.html">Curso</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_modulo.html">Módulo</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_uc.html">Unidade Curricular</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_turma.html">Turma</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_aluno.html">Aluno</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_professor.html">Professor</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_cronograma.html">Cronograma</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_professor_uc.html">Professor em UC</a>
+                        </li>
+                        <li>
+                            <a href="./cadastrar_aluno_turma.html">Aluno em Turma</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="./cronogramas.html">Cronogramas</a>
+                </li>
+                <li>
+                    <a>Alterar</a>
+                    <ul>
+                        <li>
+                            <a href="./alterar_curso.html">Curso</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_modulo.html">Módulo</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_uc.html">Unidade Curricular</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_turma.html">Turma</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_aluno.html">Aluno</a>
+                        </li>
+                        <li>
+                            <a href="./alterar_professor.html">Professor</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="../index.html">Sair</a>
+                </li>
+                </ul>
+            </nav>
+            <hr id="hr2" />
+            <section id="sectionMeio">
+                <article id="articleTitulo">
+                    <h2 class="h2Titulo">Escolha um Curso e um Módulo para criar</h2>
+                </article>
+                <article id="articleInput">
+                    <div id="divLabel">
+                        <form action="#" method="post">
+                            <fieldset id="fieldsetLabel">
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Curso:</label>
+                                        <select name="nome_curso">
+                                            <option value="curso1">Preencher com Cursos Cadastrados</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <fieldset id="bloco">
+                                    <div class="dados">
+                                        <label>Módulo:</label>
+                                        <select name="modulo">
+                                            <option value="modulo_A" selected>Módulo A</option>
+                                            <option value="modulo_B">Módulo B</option>
+                                            <option value="modulo_C">Módulo C</option>
+                                            <option value="modulo_D">Módulo D</option>
+                                        </select>
+                                    </div>
+                                </fieldset>
+                            </fieldset>
+                        </form>
+                    </div>
+                </article>
+                <article id="articleButton">
+                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnLogin" name="btnCadastrar_Modulo">Cadastrar</button></p>
+                </article>
+            </section>
+            <hr id="hr1" />
+            <footer>
+                <section id="sectionFooter">
+                    <hr id="hr3"/>
+                </section>
+            </footer>
+        </main>
+    </body>
+</html>
